@@ -4,7 +4,7 @@
     <h1 class="sidebar-logo-heading">Administrate</h1>
   </div>
 
-  <% DashboardManifest.new.dashboards.each do |resource| %>
+  <% DashboardManifest::DASHBOARDS.each do |resource| %>
     <li>
       <%= link_to(
         resource.to_s.titleize,
