@@ -1,35 +1,21 @@
 require "administrate/base_dashboard"
 
 class ProductDashboard < Administrate::BaseDashboard
-  def attribute_types
-    {
-      description: Field::String,
-      image_url: Field::Image,
-      name: Field::String,
-      price: Field::String,
-    }
-  end
+  ATTRIBUTES = [
+    :name,
+    :price,
+    :description,
+    :image_url,
+  ]
 
-  def table_attributes
-    attributes
-  end
+  ATTRIBUTE_TYPES = {
+    description: Field::String,
+    image_url: Field::Image,
+    name: Field::String,
+    price: Field::String,
+  }
 
-  def form_attributes
-    attributes
-  end
-
-  def show_page_attributes
-    attributes
-  end
-
-  private
-
-  def attributes
-    [
-      :name,
-      :price,
-      :description,
-      :image_url,
-    ]
-  end
+  TABLE_ATTRIBUTES = ATTRIBUTES
+  FORM_ATTRIBUTES = ATTRIBUTES
+  SHOW_PAGE_ATTRIBUTES = ATTRIBUTES
 end
