@@ -1,10 +1,9 @@
 Rails.application.routes.draw do
   namespace :admin do
-    DashboardManifest.new.dashboards.each do |dashboard_resource|
+    DashboardManifest::DASHBOARDS.each do |dashboard_resource|
       resources dashboard_resource
     end
 
-    root controller: DashboardManifest.new.root_dashboard, action: :index
+    root controller: DashboardManifest::ROOT_DASHBOARD, action: :index
   end
-
 end
